--- a/charts/prowlarr/templates/deployment.yaml
+++ b/charts/prowlarr/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- include "prowlarr.validateConfig" . -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -40,9 +41,30 @@ spec:
       securityContext:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.initContainers }}
+      {{- if or .Values.bootstrap.enabled .Values.initContainers }}
       initContainers:
+      {{- if .Values.bootstrap.enabled }}
+        - name: bootstrap
+          image: busybox:1.37
+          command: ["/bin/sh", "-c"]
+          args:
+            - |
+              CONFIG_FILE="{{ .Values.bootstrap.mountPath }}/config.xml"
+              if [ ! -f "$CONFIG_FILE" ]; then
+                echo "Seeding initial configuration..."
+                cp /bootstrap/config.xml "$CONFIG_FILE"
+              else
+                echo "Configuration file already exists; not overwriting."
+              fi
+          volumeMounts:
+            - name: config
+              mountPath: {{ .Values.bootstrap.mountPath }}
+            - name: bootstrap
+              mountPath: /bootstrap
+      {{- end }}
+      {{- with .Values.initContainers }}
         {{- toYaml . | nindent 8 }}
+      {{- end }}
       {{- end }}
       containers:
         - name: prowlarr
@@ -93,12 +115,31 @@ spec:
       {{- with .Values.extraContainers }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- if or .Values.persistence.enabled .Values.volumes }}
+      {{- if or .Values.persistence.enabled .Values.bootstrap.enabled .Values.volumes }}
       volumes:
       {{- if .Values.persistence.enabled }}
         - name: config
           persistentVolumeClaim:
             claimName: {{ if .Values.persistence.existingClaim }}{{ .Values.persistence.existingClaim }}{{- else }}{{ include "prowlarr.fullname" . }}-config{{- end }}
+      {{- end }}
+      {{- if .Values.bootstrap.enabled }}
+        - name: bootstrap
+          {{- if eq .Values.bootstrap.existingConfig.type "configMap" }}
+          configMap:
+            name: {{ .Values.bootstrap.existingConfig.name }}
+            items:
+              - key: {{ .Values.bootstrap.existingConfig.key }}
+                path: config.xml
+          {{- else if eq .Values.bootstrap.existingConfig.type "secret" }}
+          secret:
+            secretName: {{ .Values.bootstrap.existingConfig.name }}
+            items:
+              - key: {{ .Values.bootstrap.existingConfig.key }}
+                path: config.xml
+          {{- else }}
+          configMap:
+            name: {{ include "prowlarr.fullname" . }}-bootstrap
+          {{- end }}
       {{- end }}
       {{- with .Values.volumes }}
         {{- toYaml . | nindent 8 }}
