chore(prowlarr): update values comments

--- a/charts/prowlarr/values.yaml
+++ b/charts/prowlarr/values.yaml
@@ -95,6 +95,7 @@ envFrom: []
 
 bootstrap:
   # -- Create a config.xml file if missing.
+  # Requires persistence.enabled=true.
   enabled: false
 
   # -- Directory containing the configuration file.
