--- a/charts/radarr/templates/deployment.yaml
+++ b/charts/radarr/templates/deployment.yaml
@@ -59,6 +59,9 @@ spec:
           volumeMounts:
             - name: config
               mountPath: {{ .Values.bootstrap.mountPath }}
+              {{- with .Values.persistence.config.subPath }}
+              subPath: {{ . }}
+              {{- end }}
             - name: bootstrap
               mountPath: /bootstrap
       {{- end }}
@@ -107,10 +110,16 @@ spec:
             {{- if .Values.persistence.config.enabled }}
             - name: config
               mountPath: {{ .Values.persistence.config.mountPath | default "/config" }}
+              {{- with .Values.persistence.config.subPath }}
+              subPath: {{ . }}
+              {{- end }}
             {{- end }}
             {{- if .Values.persistence.data.enabled }}
             - name: data
               mountPath: {{ .Values.persistence.data.mountPath | default "/data" }}
+              {{- with .Values.persistence.data.subPath }}
+              subPath: {{ . }}
+              {{- end }}
             {{- end }}
           {{- with .Values.volumeMounts }}
             {{- toYaml . | nindent 12 }}
