--- a/charts/sonarr/values.yaml
+++ b/charts/sonarr/values.yaml
@@ -127,6 +127,8 @@ persistence:
     enabled: true
     # -- Mount path.
     mountPath: /config
+    # -- Subdirectory of the volume to mount (optional).
+    subPath: ""
     # -- Storage class ("-" for default, "" for cluster default).
     storageClass: ""
     # -- Access modes.
@@ -145,6 +147,8 @@ persistence:
     enabled: true
     # -- Mount path.
     mountPath: /data
+    # -- Subdirectory of the volume to mount (optional).
+    subPath: ""
     # -- Storage class ("-" for default, "" for cluster default).
     storageClass: ""
     # -- Access modes.
